<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">CMPR1</string>
    <string name="elec">Electricidad</string>
    <string name="inter">Internet</string>
    <string name="gas">Gas</string>
    <string name="agua">Agua</string>
    <string name="go_pago">Ir a Pago</string>
    <string name="selec_serv">Seleccione servicios a pagar</string>
    <string name="elec_secl">Servicio Electricidad seleccionado</string>
    <string name="inter_secl">Servicio Internet seleccionado</string>
    <string name="agua_secl">Servicio Agua seleccionado</string>
    <string name="gas_secl">Servicio Gas seleccionado</string>
    <string name="req_inf">Campo Requerido</string>
    <string name="ask_info">Complete la información requerida</string>
    <string name="hint_nums">****************</string>
    <string name="hint_cvv">***</string>
    <string name="hint_nombre">Nombre</string>
    <string name="pg_desc">Ingrese la información solicitada para pagar</string>
    <string name="pg_numtj">Número de tarjeta</string>
    <string name="pg_date">Fecha de vencimiento</string>
    <string name="pg_cvv">CVV</string>
    <string name="pg_tjnom">Tarjeta Habiente</string>
    <string name="pg_correo">Correo electrónico</string>
    <string name="pg_efpago">Efectuar Pago</string>
    <string name="pg_total">Total a Pagar</string>
    <string name="pg_correo_hint">ejemplo@mail.com</string>
    <string name="pg_correo_error">Formato de correo incorrecto</string>
    <string name="op_expop">Operación Exitosa</string>
    <string name="op_flpop">Fallo en la operación. Intente nuevamente.</string>
    <string name="obl_todo">todo para evitar wargings</string>
    <string-array name="tj_names" >
        <item>Seleccione tarjeta de crédito</item>
        <item>Visa</item>
        <item>Mastercard</item>
        <item>American Express</item>
    </string-array>
    <string-array name="date_mes" >
        <item>Mes</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="date_ann" >
        <item>Año</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
    </string-array>
</resources>